--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+body {
+    font-family: "Open Sans", serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapper {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url("img/nature_mountain.jpg") center center no-repeat;
+    background-size: 100% 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main {
+    height: 55vh;
+    /*background: #2a6bb1;*/
+    box-shadow: 0px 2px 80px -20px rgba(0,0,0,3);
+    width: 60%;
+    margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.info {
+    height: 55vh;
+    background: url("img/nature_original.jpg") center center no-repeat;
+    background-blend-mode: multiply;
+    background-color: #484747;
+    border: 2px solid #1f1f1f;
+    border-right: 2px solid #131e29;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #000;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+    height: 55vh;
+    padding-top: 50px;
+    padding-left: 90px;
+    border-top: 2px solid #113a65;
+    border-bottom: 2px solid #113a65;
+    border-right: 2px solid #113a65;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="text"] {
+    background-color: transparent;
+    border: 0;
+    border-bottom: solid 2px #113a65;
+    width: 50%;
+    padding-bottom: 4px;
+    color: #103a65;
+    font-weight: lighter;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    font-size: 20px;
+    outline: none;
+}
+
+input::-webkit-input-placeholder {
+    color: #103a65;
+}
+
+input::-moz-placeholder {
+    color: #103a65;
+}
+
+button {
+    border: 2px solid #103a65;
+    border-bottom: 4px solid #103a65;
+    padding: 8px 20px;
+    margin: 0 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #235d9c;
+    color: #fff;
+    outline: none!important;
+}
+
+button:hover {
+    border-bottom: 2px solid #103a65;
+    position: relative;
+    top: 2px;
+}
+
+button:active {
+    border-bottom: 2px solid transparent;
+    border-color: transparent;
+    position: relative;
+    top: 2px;
+}
+
+.info h2 {
+    font-size: 3em;
+    color: #fff;
+}
+
+.info p {
+    color: #e4e4e4;
+    font-weight: bold;
+}
+
+.infoWeather {
+    margin-top: 2em;
+    width: 86%;
+    font-size: 20px;
+    color: #fff;
+    background-color: #484747;
+    opacity: 0.7;
+    border-radius: 3px;
+}
+
+.infoWeather p {
+    color: #fff;
+}
+
+.error {
+    color: #041f3c;
+    font-weight: bold;
 }
